# docs/swagger.yaml
@@ -161,4 +161,64 @@ paths:
       summary: Создание новой транзакции
       tags:
       - transactions
+  /transactions/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает информацию о транзакции по её идентификатору
+      parameters:
+      - description: ID транзакции (UUID)
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.TransactionResponse'
+        "400":
+          description: invalid ID format
+          schema:
+            type: string
+        "404":
+          description: category not found
+          schema:
+            type: string
+        "500":
+          description: internal server error
+          schema:
+            type: string
+      summary: Получить тразакцию по ID
+      tags:
+      - transactions
+  /transactions/user/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: Возвращает список всех транзакций пользователя
+      parameters:
+      - description: ID пользователя
+        in: query
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/dto.TransactionResponse'
+            type: array
+        "500":
+          description: internal server error
+          schema:
+            type: string
+      summary: Получить все транзакции пользователя
+      tags:
+      - transactions
 swagger: "2.0"
